// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`===== File test ===== File Replication should get file replication 1`] = `
{
  "Filecoin": {
    "links": toBeArray<>,
    "metadata": null,
    "status": Any<String>,
  },
  "Filefilego": {
    "links": toBeArray<>,
    "metadata": null,
    "status": Any<String>,
  },
  "IPFS": {
    "links": toBeArray<>,
    "metadata": null,
    "status": Any<String>,
  },
  "Sia": {
    "links": toBeArray<>,
    "metadata": null,
    "status": Any<String>,
  },
}
`;

exports[`===== File test ===== List of Files should get a list of files 1`] = `
[
  {
    "cid": Any<String>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": Any<String>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": Any<String>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": Any<String>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": Any<String>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": Any<String>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": Any<String>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
]
`;

exports[`===== File test ===== » Upload a File should bulk upload file 1`] = `
[
  {
    "cid": Any<String>,
    "code": toEqualCaseInsensitive<201>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": toEqualCaseInsensitive<9511b8d4-9919-4363-9093-6091510f396c>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "success": toBeTrue<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "code": toEqualCaseInsensitive<201>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": toEqualCaseInsensitive<9511b8d4-9919-4363-9093-6091510f396c>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "success": toBeTrue<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "code": toEqualCaseInsensitive<201>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": toEqualCaseInsensitive<9511b8d4-9919-4363-9093-6091510f396c>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "success": toBeTrue<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
  {
    "cid": Any<String>,
    "code": toEqualCaseInsensitive<201>,
    "contentType": Any<String>,
    "createdAt": toBeDateString<>,
    "directoryId": toEqualCaseInsensitive<9511b8d4-9919-4363-9093-6091510f396c>,
    "driveId": Any<String>,
    "edgeURL": Any<String>,
    "id": Any<String>,
    "imageLink": Any<String>,
    "isEncrypted": Any<Boolean>,
    "labels": toBeArray<>,
    "name": Any<String>,
    "network": null,
    "onChainId": null,
    "ownerId": Any<String>,
    "password": toBeOneOf<Any,>,
    "pieceId": null,
    "sharedId": Any<String>,
    "size": Any<Number>,
    "softDeleted": toBeFalse<>,
    "status": Any<String>,
    "storageClasses": toBeArray<>,
    "success": toBeTrue<>,
    "updatedAt": toBeDateString<>,
    "version": toEqualCaseInsensitive<1>,
    "versionTag": toEqualCaseInsensitive<latest>,
  },
]
`;
